// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render facility avatar when variant is facility 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <svg
    aria-hidden="true"
    class="icon"
    data-name="Layer 1"
    focusable="false"
    height="1em"
    viewBox="0 0 48 48"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M36 11V0H12v11H5v37h16V36h6v12h16V11zM15 41h-4v-5h4zm0-12h-4v-5h4zm11 0h-4v-5h4zm5-15h-5v5h-4v-5h-5v-4h5V5h4v5h5zm6 27h-4v-5h4zm0-12h-4v-5h4z"
    />
  </svg>
</circle>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <img
    alt="placeholder"
    class="avatar-child"
    src="test-file-stub"
  />
</circle>
`;

exports[`Avatar should render intials avatar when initials are passed in 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <text
    class="avatar-child"
  >
    JS
  </text>
</circle>
`;

exports[`Avatar should render user avatar when variant is user 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <svg
    aria-hidden="true"
    class="icon"
    data-name="Layer 1"
    focusable="false"
    height="1em"
    viewBox="0 0 48 48"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M24 0a11.3 11.3 0 1 1-11.3 11.3A11.35 11.35 0 0 1 24 0zm19.5 48v-5.7a16.77 16.77 0 0 0-16.8-16.8h-5.5A16.75 16.75 0 0 0 4.5 42.3V48z"
    />
  </svg>
</circle>
`;
